@@ -2079,7 +2079,6 @@ typing/typemod.cmo : \
     utils/clflags.cmi \
     parsing/builtin_attributes.cmi \
     typing/btype.cmi \
-    parsing/attr_helper.cmi \
     parsing/asttypes.cmi \
     typing/typemod.cmi
 typing/typemod.cmx : \
@@ -2119,7 +2118,6 @@ typing/typemod.cmx : \
     utils/clflags.cmx \
     parsing/builtin_attributes.cmx \
     typing/btype.cmx \
-    parsing/attr_helper.cmx \
     parsing/asttypes.cmx \
     typing/typemod.cmi
 typing/typemod.cmi : \
