@@ -68,6 +68,7 @@ let builtin_attrs =
   ; "noalloc"
   ; "poll"
   ; "ppwarning"
+  ; "remove_aliases"
   ; "specialise"
   ; "specialised"
   ; "tailcall"
@@ -410,3 +411,5 @@ let immediate64 attrs = has_attribute "immediate64" attrs
 let has_unboxed attrs = has_attribute "unboxed" attrs
 
 let has_boxed attrs = has_attribute "boxed" attrs
+
+let has_remove_aliases attrs = has_attribute "remove_aliases" attrs
